BPER/DEVF/force-app/main/default/objects/TrackingHistoryConfiguration__mdt/TrackingHistoryConfiguration__mdt.object-meta.xml
<CustomObject>
    <label>TrackingHistoryConfiguration</label>
    <pluralLabel>TrackingHistoryConfigurations</pluralLabel>
</CustomObject>