BPER/DEVF/force-app/main/default/objects/TrackingHistoryConfiguration__mdt/fields/ObjectDevName__c.field-meta.xml
<CustomField>
    <fullName>ObjectDevName__c</fullName>
    <description>Object API name to track</description>
    <label>ObjectDevName</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>