BPER/DEVF/force-app/main/default/objects/TrackingHistoryConfiguration__mdt/fields/ParentField__c.field-meta.xml
<CustomField>
    <fullName>ParentField__c</fullName>
    <description>API name of the field in which Id is saved</description>
    <label>ParentField</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>