BPER/DEVF/force-app/main/default/objects/TrackingHistoryConfiguration__mdt/fields/RecordTypeDevName__c.field-meta.xml
<CustomField>
    <fullName>RecordTypeDevName__c</fullName>
    <description>Parent object record type developer name to track</description>
    <label>RecordTypeDevName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>