BPER/DEVF/force-app/main/default/objects/TrackingHistoryConfiguration__mdt/fields/TrackingFieldList__c.field-meta.xml
<CustomField>
    <fullName>TrackingFieldList__c</fullName>
    <description>Field API name list to track, separated by &quot;;&quot;</description>
    <label>TrackingFieldList</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>